fix 3d carousel design on mobile

--- a/public/front/scss/main.css
+++ b/public/front/scss/main.css
@@ -817,6 +817,9 @@ input[type="range"]:active::-webkit-slider-thumb {
 .top-full {
   top: 100%;
 }
+.left-\[35\%\] {
+  left: 35%;
+}
 .\!z-40 {
   z-index: 40 !important;
 }
@@ -953,6 +956,18 @@ input[type="range"]:active::-webkit-slider-thumb {
 .my-\[5px\] {
   margin-top: 5px;
   margin-bottom: 5px;
+}
+.\!mx-\[\] {
+  margin-left:  !important;
+  margin-right:  !important;
+}
+.\!mx-\[10\] {
+  margin-left: 10 !important;
+  margin-right: 10 !important;
+}
+.\!mx-\[10\%\] {
+  margin-left: 10% !important;
+  margin-right: 10% !important;
 }
 .\!mt-0 {
   margin-top: 0px !important;
@@ -1155,6 +1170,9 @@ input[type="range"]:active::-webkit-slider-thumb {
 .mt-auto {
   margin-top: auto;
 }
+.mt-\[-50px\] {
+  margin-top: -50px;
+}
 .box-border {
   box-sizing: border-box;
 }
@@ -1350,6 +1368,9 @@ input[type="range"]:active::-webkit-slider-thumb {
 }
 .h-screen {
   height: 100vh;
+}
+.h-\[65vh\] {
+  height: 65vh;
 }
 .max-h-\[500px\] {
   max-height: 500px;
@@ -1552,6 +1573,9 @@ input[type="range"]:active::-webkit-slider-thumb {
 .w-screen {
   width: 100vw;
 }
+.\!w-full {
+  width: 100% !important;
+}
 .min-w-0 {
   min-width: 0px;
 }
@@ -1748,8 +1772,20 @@ input[type="range"]:active::-webkit-slider-thumb {
   --tw-translate-y: 50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.translate-y-\[\] {
+  --tw-translate-y: ;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.translate-y-\[-15\%\] {
+  --tw-translate-y: -15%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .rotate-180 {
   --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.-rotate-90 {
+  --tw-rotate: -90deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-0 {
@@ -6449,6 +6485,15 @@ footer.footer {
 
 @media (min-width: 1024px) {
 
+  .lg\:left-\[43\%\] {
+    left: 43%;
+  }
+
+  .lg\:\!mx-\[35\%\] {
+    margin-left: 35% !important;
+    margin-right: 35% !important;
+  }
+
   .lg\:mt-0 {
     margin-top: 0px;
   }
@@ -6469,12 +6514,24 @@ footer.footer {
     height: 75px;
   }
 
+  .lg\:h-\[90vh\] {
+    height: 90vh;
+  }
+
   .lg\:\!w-12 {
     width: 3rem !important;
   }
 
   .lg\:w-auto {
     width: auto;
+  }
+
+  .lg\:w-\[40\%\] {
+    width: 40%;
+  }
+
+  .lg\:\!w-\[40\%\] {
+    width: 40% !important;
   }
 
   .lg\:max-w-\[290px\] {
@@ -6487,6 +6544,21 @@ footer.footer {
 
   .lg\:basis-2\/5 {
     flex-basis: 40%;
+  }
+
+  .lg\:-translate-x-1\/2 {
+    --tw-translate-x: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:rotate-90 {
+    --tw-rotate: 90deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  }
+
+  .lg\:rotate-0 {
+    --tw-rotate: 0deg;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .lg\:columns-2 {
